--- a/css/index.css
+++ b/css/index.css
@@ -4,15 +4,16 @@ body {
   margin: 0px;
 }
 body {
-  --background-primary: #fff;
-  --font-color-primary: #333;
+  /* #19112E */
+  --background-primary: #19112e;
+  --font-color-primary: #fff;
   --elevation-background: #f3f3f3;
   --link-color: #006eb8;
   --font-family-primary: 'Roboto', Arial;
   --handwriting-font: 'Homemade Apple', cursive;
   --primary-color: #1a73e8;
   --ink-color: #000f55;
-  --label-color: #333;
+  --label-color: #fff;
   --field-borders: #e0e0e0;
   --primary-button-bg: #1d1d1d;
   --primary-button-color: #eee;
@@ -157,6 +158,7 @@ ul.info-ul > li {
 .generate-image-section {
   padding: 10px 10px;
   font-size: 1.2rem;
+  margin: 0;
 }
 .generate-image-button {
   background-color: var(--primary-button-bg);
@@ -287,7 +289,7 @@ body.dark .github-corner {
   top: -11px;
   border-radius: 100%;
   padding: 4px 10px;
-  background-color: #333;
+  background-color: #ff0000;
   color: #fff;
   font-size: 15pt;
   font-weight: bold;
@@ -297,7 +299,7 @@ body.dark .github-corner {
   text-align: center;
   margin-top: 10px;
   background-color: #1d1d1d;
-  color: #ccc;
+  color: #fff;
   font-weight: bold;
   font-size: 0.9rem;
   padding: 10px 15px;
@@ -305,6 +307,8 @@ body.dark .github-corner {
 }
 #download-as-pdf-button {
   display: none;
+  background-color: #1d1d1d;
+  /* color: #FFFF00; */
 }
 #download-as-pdf-button.show {
   display: inline-block;
